Problem with express only allowing a single http get method. Resolving bug... grrr

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,7 +5,7 @@
 	  <div class="col-md-3"  style="background-color: #dedef8; box-shadow: 
 		 inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
 		 <h2> News Feed</h2>
-		 <p> ALl of this data will come from a form </p>
+		 <p> {{News}} </p>
 	  </div>
 
 	  <div class="col-md-9"> 
