--- a/public/views/dev.html
+++ b/public/views/dev.html
@@ -1,3 +1,4 @@
+        <h1> {{understand}} </h1>
         <form name="userForm" ng-submit="sendForm(userForm.$valid)" novalidate>
         <!-- USERNAME -->
         <div class="form-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
