--- a/public/views/mark.html
+++ b/public/views/mark.html
@@ -12,17 +12,17 @@
             <input type="email" name="email" class="form-control" ng-model="user.email">
             <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block">Enter a valid email.</p>
         </div>
-        <!-- Operating System -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.OS.$invalid && !userForm.OS.$pristine }">
-            <label>What Is Your development Operating System (Example: Windows 7 Professional, Ubuntu 12.04 Desktop, etc..)</label>
-            <input type="text" name="OS" class="form-control" ng-model="user.OS" >
-            <p ng-show="userForm.OS.$invalid && !userForm.OS.$pristine" class="help-block">Please, tell us a bit more about what you like/do/have done in software</p>
+        <!-- Area of Expertise -->
+        <div class="form-group" ng-class="{ 'has-error' : userForm.expert.$invalid && !userForm.expert.$pristine }">
+            <label>Do you have a specific domain of knowledge in Marketing</label>
+            <input type="text" name="expert" class="form-control" ng-model="user.expert" >
+            <p ng-show="userForm.expert.$invalid && !userForm.expert.$pristine" class="help-block">Please, tell us a bit more about what you like/do/have done in software</p>
         </div>
-        <!-- Text Editor  -->
-        <div class="form-group" ng-class="{ 'has-error' : userForm.editor.$invalid && !userForm.editor.$pristine }">
-            <label>What do you like to code in (notepad++, vim, eclipse) ?</label>
-			<input type="text" name="editor" class="form-control" ng-model="user.editor" >
-            <p ng-show="userForm.editor.$invalid && !userForm.user_description.$pristine" class="help-block">Below 25 characters</p>
+        <!-- Major  -->
+        <div class="form-group" ng-class="{ 'has-error' : userForm.major.$invalid && !userForm.major.$pristine }">
+            <label>What is your University Major?</label>
+			<input type="text" name="major" class="form-control" ng-model="user.major" >
+            <p ng-show="userForm.major.$invalid && !userForm.major.$pristine" class="help-block">Below 25 characters</p>
         </div>
         <!-- Description -->
         <div class="form-group" ng-class="{ 'has-error' : userForm.user_description.$invalid && !userForm.user_description.$pristine }">
@@ -33,4 +33,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         <h1>{{understand}}</h1>
+
 
