--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,20 +1,74 @@
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 <div class="jumbotron">
 	<h1>News</h1> 
 </div>
 
+<body>
+  <div class="container-fluid">
+    <div class="sidebar">
+		This could be a picture
+    </div>
+    <div class="content">
+		jksdfkljsdf
+    </div>
+  </div>
+
 <div class="jumbotron">
-<div class="paragraphs">
-  	<div class="row">
-       <div class="span4">
-		  <a  href="http://www.carletonmap.com" target="_blank" >
-		  	<img style="float:left" ng-src="http://localhost:8089/views/images/{{ path }}" height=70% width=70%>
-		  </a>
-		   <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
-		  	<p> <font size="2">Carleton leveraged our developers to create a custom GPS for the University day-to-day use. This is being released into production this week.</font></p>
-		</div>
-	</div>
+               <div class="content-heading"><h2><a href="http://www.carletonmap.com"> Carleton local GPS </a></h2></div>
+    <div class="paragraphs">
+        <div class="row">
+           <div class="span4">
+              <!--Image -->
+              <a  href="http://www.carletonmap.com" target="_blank" >
+                <img style="float:left" ng-src="http://localhost:8089/views/images/{{ path }}" height=70% width=70%>
+              </a>
+               <!-- Text -->
+               <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
+                <p> <font size="2">Carleton leveraged our developers to create a custom GPS for the University day-to-day use. This is being released into production this week.</font></p>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+<div class="jumbotron">
+    <div class="paragraphs">
+        <div class="row">
+           <div class="span4">
+               <!-- Text -->
+               <div class="content-heading"><h3><a href="/about"> go to the ABOUT page  </a></h3></div>
+                <p> <font size="2">Carleton leveraged our developers to create a custom GPS for the University day-to-day use. This is being released into production this week.</font></p>
+              <!--Image -->
+              <a  href="http://www.carletonmap.com" target="_blank" >
+                <img style="float:right" ng-src="http://localhost:8089/views/images/{{ path }}" height=70% width=70%>
+              </a>
+               
+            </div>
+        </div>
+    </div>
 </div>
+
+<div class="jumbotron">
+        <div class="col-xs-36">
+                               <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
+            <div class="panel panel-default">
+                                   <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
+                <div class="row outer">
+                                       <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
+                    <div class="col-xs-16">
+                        <img ng-src="http://localhost:8089/views/images/{{ path }}" height=100% width=100%> 
+                    </div>
+                    <div class="col-xs-12">
+
+                        <p> <font size="4">Carleton leveraged our developers to create a custom GPS for the University day-to-day use. This is being released into production this week.</font></p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+</body>
+
       <!--div class="jumbotron">
         <h1>News</h1>      <div class="modal-body">
         <p></p>
