Started Contact centering. Drafted the About page. Tuned the home page, and cleaned up the views.

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,24 +1,26 @@
 <div class="jumbotron">
 	<h1>What is AppTruth?</h1> 
+
 </div>
 <div class="jumbotron">
 	
       <!-- Example row of columns -->
       <div class="row">
         <div class="span-one-third">
-          <h2>Heading</h2>
-          <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>We make apps!</h2>
+          <p>Spawned by a team of students, we intend to ship software useful to both <a href="/users">users </a> and <a href="/enterprise">enterprise </a> on an agile scale</p>  
+          <!--p><a class="btn" href="#">View details &raquo;</a></p-->
         </div>
         <div class="span-one-third">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Affordable (or have this be a central canada thing)</h2>
+           <p>Located centrally in Ottawa, Canada, we work with students from the best and the brightest Canadian Universities. We spark a fine balance between classic design patterns and newer methodologies. </p>
        </div>
         <div class="span-one-third">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>User-Driven</h2>
+          <p>
+Our software designs are not dogmatic towards a specific, traditional design pattern, but created upon the enlightenment of the problem/s at hand. This builds a generic, and more flexible frame to build off of, as well as a scalable solution that is both simple and easy to maintain. </p>
+      	<p><a class="btn" href="/contact">View Contact details &raquo;</a></p>
         </div>
       </div> 
+
 </div>
