Functional frontend. Closed forms for now

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -12,7 +12,7 @@
           <!--p><a class="btn" href="#">View details &raquo;</a></p-->
         </div>
         <div class="span-one-third">
-          <h2>Affordable (or have this be a central canada thing)</h2>
+          <h2>Located in Canada's Core</h2>
            <p>Located centrally in Ottawa, Canada, we work with students from the best and the brightest Canadian Universities. We spark a fine balance between classic design patterns and newer methodologies. </p>
        </div>
         <div class="span-one-third">
