--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,7 +1,13 @@
 <div class="jumbotron">
 <div text-align:center >
-	<h3> Contact information
-	</h3>
+	<h2> All forms will open up after the meeting on : DATE </h2>
+    <p></p>
+    <p></p>
+
+    
+    <h3> Contact information</h3>
+    <p> email : luc785@hotmail.com </p>
+    
 </div>
 <div class="btn-group">
 
@@ -13,13 +19,13 @@
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
       <i class="glyphicon glyphicon-plus-sign"></i> <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu" role="menu">
+    <!--ul class="dropdown-menu" role="menu">
       <li><a href="#">Action</a></li>
       <li><a href="#">Another action</a></li>
       <li><a href="#">Something else here</a></li>
       <li class="divider"></li>
       <li><a href="#">Separated link</a></li>
-    </ul>
+    </ul-->
   </div>
 
   <div class="btn-group">
@@ -27,11 +33,11 @@
       <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
+      <li><a href="/home">Go back to home</a></li>
+      <li><a href="/about">Go to about </a></li>
+      <li><a href="/role">See roles</a></li>
       <li class="divider"></li>
-      <li><a href="#">Separated link</a></li>
+      <!--li><a href="#">Separated link</a></li-->
     </ul>
   </div>
 
