--- a/public/views/role.html
+++ b/public/views/role.html
@@ -11,53 +11,45 @@
           <h2>Overview</h2>
             <p>Please, feel free to fill out a form so we can connect with you. Which of these positions interests you most? <p> 
             <font size="4">
-			<!--ul>
-			  <li>Shipping Software</li>
-			  <li>Helping Students learn</li>
-			  <li>Provide</li>
 			</ul-->
 			</font>	  
-          <!--p><a class="btn" href="#">View details &raquo;</a></p-->
         </div>
-        
+
+<ul>   
+        <div class="span-one-third">
+          <h2><a href="/contact"> Software Developer Test</a></h2>
+          <p>The Software Developers own the implementation of the app or feature.</p> 
+        </div>
 
         
         <div class="span-one-third">
-          <h2><a href="/dev"> Software Developers</a></h2>
-          <p>The Software Developers own the implementation of the app or feature.
-          
-        </div>  
-        <div class="span-one-third">
-          <h2><a href="/test"> Software Developer Tests</a></h2>
+          <h2><a href="/contact"> Software Developer Test</a></h2>
           <p>The Software Developer Tests own the backend success of the app or feature. </p>
         </div>
          
         <div class="span-one-third">
-          <h2><a href="/pm"> Program Manager</a></h2>
+          <h2><a href="/contact"> Program Manager</a></h2>
           <p>The Program Manager designs systems on a high level, and creates functional requirements for the app or feature. </p>
 
         </div>       
         <div class="span-one-third">
-          <h2><a href="/mark">Marketing Asssociate</a></h2>
+          <h2><a href="/contact">Marketing Asssociate</a></h2>
+          <h2> Marketing Associate</h2>
           <p>The Marketing Associate helps tell the user story, and creates a pipeline between end user and developer production</p>
         </div>
 
         <div class="span-one-third">
-        <h2><a href="/bus">Business Asssociate</a></h2>
+        <h2><a href="/contact">Business Asssociate</a></h2>
+        <h2> Business Associate</h2>
           <p>The Business Associate is the engine that drives the financial model of the group.</p>
         </div>
 
         <div class="span-one-third">
-          <h2>Anthropology Associate</h2>
+        <h2><a href="/contact">Anthropology Asssociate</a></h2>
           <p> The Anthropology Associate is the research associated with raw end user experience.</p>
         </div>
-
-
-
-
-
-      </div> 
-
+      </div>
+    </ul>
 </div>
 
 
