--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,6 +3,17 @@
 	<h1>News</h1> 
 </div>
 
+<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+<div class="jumbotron">
+	<h2>First Meeting at Carleton University</h2>
+    <ul>
+        <li><p>Time: 5pm </p></li>
+        <li><p>Location: 4th Floor at Carleton Discovery Centre </p></li>
+        <li><p>Description : Live Q&A about the projects</p></li>
+
+
+</div>
+
 <!-- TODO Create a ng-repeat that autogenerates this, and create a flag variable to oscillate the sides that the picture and text content are on. -->
 
 <div class="jumbotron">
@@ -28,11 +39,9 @@
         <div class="row">
            <div class="span4">
               <!--Image -->
-              <a  href="http://www.carletonmap.com" target="_blank" >
                 <img style="float:left" ng-src="http://localhost:8089/views/images/{{ appgroup }}" height=70% width=70%>
-              </a>
                <!-- Text -->
-               <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton collaboration </a></h3></div>
+               <div class="content-heading"><h3><a href="/contact"> Carleton collaboration </a></h3></div>
                 <p> <font size="4">Our application development group worked alongside Carleton web development coordinators, as well as general student administration to iterate on a solid design.</font></p>
             </div>
         </div>
