Confirm page after successful form send

--- a/public/views/bus.html
+++ b/public/views/bus.html
@@ -1,3 +1,5 @@
+        <h2> Business Associate </h2>
+
         <form name="userForm" ng-submit="sendForm(userForm.$valid)" novalidate>
         <!-- USERNAME -->
         <div class="form-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
@@ -32,5 +34,4 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <h1>{{understand}}</h1>
 
