Cleaning with html before pushing to server

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,7 +5,7 @@
 
 <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 <div class="jumbotron">
-	<h2>First Group Meeting of 2014!!!</h2>
+	<h2>Applications are now OPEN!!</h2>
     <ul>
         <li><p>Time: 5-6pm </p></li>
         <li><p>Date: Monday 15th September 2014 </p></li>
@@ -26,7 +26,7 @@
                 <img style="float:right" ng-src="http://www.apptruth.ca/views/images/{{ carletonmap }}" height=70% width=70%>
               </a>
                <!-- Text -->
-               <div class="content-heading"><h3><a href="http://www.carletonmap.com"> Carleton local GPS </a></h3></div>
+               <div class="content-heading"><h3><a href="http://www.carletonmap.com"> SHIPPING CARLETON GPS! </a></h3></div>
                 <p> <font size="4">Carleton leveraged our developers to create a custom GPS for the University day-to-day use. This is being released into production this week.</font></p>
             </div>
         </div>
@@ -48,4 +48,6 @@
         </div>
     </div>
 </div>
+
+
 
