--- a/public/styles/GeneralStyles.css
+++ b/public/styles/GeneralStyles.css
@@ -75,10 +75,11 @@ button.rightmost{
 /* This is the content box that switches and passes content */
 #text_content{
 	position: absolute;
-	overflow: scroll;
-	right : 700px;
+	float:right;
+	width:50%;
+	height:100%;
+	right : 10px;
 	top : 380px;
-	height: 450px;
 	/* right : 170px;
 	top : 380px;*/
 }
@@ -123,3 +124,109 @@ a:active {
     color: #0000FF;
 }
 
+
+
+<style type="text/css">
+#top {
+background-color: #FF0;
+width: 1800px;
+height: 50px;
+position: fixed;
+left: 0px;
+top: 0px;
+}
+
+#sideLeft {
+float: left;
+width: 950px;
+background-color: #9C0;
+clear: left;
+}
+
+#sidebarLeft {
+background-color: #0CC;
+height: 800px;
+width: 300px;
+float: left;
+}
+
+.list {
+float: left;
+width: 600px;
+margin-top: 100px;
+}
+#ordoner {
+background-color: #F90;
+float: left;
+width: 640px;
+height: 800px;
+position: fixed;
+top: 50px;
+left: 950px;
+}
+
+#sidebarRight {
+width: 210px;
+height: 800px;
+position: fixed;
+top: 50px;
+left: 1590px;
+background-color: #0CF;
+}
+{
+    margin: 0;
+    padding: 0;
+}
+
+html, body, .Container
+{
+    height: 100%;
+}
+
+    .Container:before
+    {
+        content: '';
+        height: 100%;
+        float: left;
+    }
+
+.Header
+{
+    margin-bottom: 10px;
+    background-color: #6ea364;
+}
+.Content
+{
+    position: relative;
+    z-index: 1;
+}
+    .Content:after
+    {
+        content: '';
+        clear: both;
+        display: block;
+    }
+
+.Wrapper
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+    .Wrapper > div
+    {
+        height: 100%;
+    }
+
+.LeftContent
+{
+    background-color: purple;
+    overflow: auto;
+}
+
+.RightContent
+{
+    background-color: orange;
+    float: right;
+    margin-left: 10px;
+}
