--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div class="NavBar">
+<!-- <div class="NavBar">
   <p class="about">
   <a href="#about">
   About
@@ -11,6 +11,7 @@
   </p>
 </div>
 <div ng-controller="QueryController">
+<div id="text_content">
   <button class="rightmost" ng-click="direction()">
 Discovery
   </button>
@@ -21,36 +22,55 @@ Design
 Direction
   </button>
 
-        <div id="text_content">
-          <h1 class="explanation">
+        
+          <h1>
           MAPPING MADE SIMPLE
           </h1>
-            <p class="explanation_p" style="white-space: pre;"><br><br><br><br>
-            {{info}}
-            </p>
-            <br><br><br><br><br><br>
-<p> hello world</p>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
-<p> hello world</p>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br><p> hello world</p>
-<p> hello world</p>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
-<p> hello world</p>
-<br><br><br><br><br><br>
-<br><br><br><br><br><br><p> hello world</p>
+
+          <p class="explanation_p" style="white-space: pre;"><br><br><br><br>
+          {{info}}
+          </p>
+
+          <p> hello world</p>
+
+          <body> -->
+ <div class="Container">
+        <div class="Header">
+            <p>The Header div height is not fixed (But he can be if you want it to)</p>
+            <p>This Layout has been tested on: IE10, IE9, IE8, FireFox, Chrome, Safari, Opera. using Pure CSS 2.1 only</p>
         </div>
+        <div class="Content">
+            <div class="Wrapper">
+                <div class="RightContent">
+                    <p>You can fix the width of this content.</p>
+                    <p>if you wont, his width will stretch just as it needs to.</p>
+                    <div><button>CLICK AWAY</button><button>CLICK AAGAIN</button><button>CLICK AAGAIN</button><button>CLICK AAGAIN</button></div>
+                </div>
+                <div class="LeftContent">
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                    <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- </body>
+</html>
+
+    </div>
+    </div>
 <div>
 
 </div>
 </div>
 <div class="MapAnimation"> 
 
-</div>
+</div> -->
 
 
 <!--div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
