--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,16 +1,6 @@
-<!-- <div class="NavBar">
-  <p class="about">
-  <a href="#about">
-  About
-  </a>
-  </p>
-  <p class="contact">
-  <a href="#contact">
-  Contact
-  </a>
-  </p>
+
 </div>
-<div ng-controller="QueryController">
+<!-- <div ng-controller="QueryController">
 <div id="text_content">
   <button class="rightmost" ng-click="direction()">
 Discovery
@@ -34,18 +24,31 @@ Direction
           <p> hello world</p>
 
           <body> -->
+          <div class="NavBar">
+  <p class="about">
+  <a href="#about">
+  About
+  </a>
+  </p>
+  <p class="contact">
+  <a href="#contact">
+  Contact
+  </a>
+  </p>
+</div> 
  <div class="Container">
         <div class="Header">
             <p>The Header div height is not fixed (But he can be if you want it to)</p>
             <p>This Layout has been tested on: IE10, IE9, IE8, FireFox, Chrome, Safari, Opera. using Pure CSS 2.1 only</p>
         </div>
-        <div class="Content">
-            <div class="Wrapper">
+     
+<!--             <div class="Wrapper">
                             <div class="LeftContent">
                     <p>You can fix the width of this content.</p>
                     <p>if you wont, his width will stretch just as it needs to.</p>
-                    <div><button>CLICK AWAY</button><button>CLICK AAGAIN</button><button>CLICK AAGAIN</button><button>CLICK AAGAIN</button></div>
-                </div>
+            -->
+                    <div class="waa"></div>
+                    <!-- </div> -->
                             <div class="RightContent">
                     <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
                     <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
@@ -58,7 +61,7 @@ Direction
                 </div>
 
 
-            </div>
+          
         </div>
     </div>
 <!-- </body>
@@ -72,7 +75,7 @@ Direction
 </div>
 <div class="MapAnimation"> 
 
-</div> -->
+</div>
 
 
 <!--div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
