--- a/public/views/home.html
+++ b/public/views/home.html
@@ -42,14 +42,11 @@ Direction
             <p>This Layout has been tested on: IE10, IE9, IE8, FireFox, Chrome, Safari, Opera. using Pure CSS 2.1 only</p>
         </div>
      
-<!--             <div class="Wrapper">
-                            <div class="LeftContent">
-                    <p>You can fix the width of this content.</p>
-                    <p>if you wont, his width will stretch just as it needs to.</p>
-            -->
-                    <div class="waa"></div>
-                    <!-- </div> -->
-                            <div class="RightContent">
+            <div class="Wrapper">
+
+                    <div class="waa"> </div>
+                  
+                  <div class="RightContent">
                     <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
                     <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
                     <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
