Finished_The_First_PAge

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -23,7 +23,8 @@ Direction
           <p> hello world</p>
 
           <body> -->
-          <div class="NavBar">
+
+<div class="NavBar">
   <p class="about">
   <a href="#about">
   About
@@ -35,49 +36,52 @@ Direction
   </a>
   </p>
 </div> 
- <div class="Container">
-        <div class="Header">
-            <p>The Header div height is not fixed (But he can be if you want it to)</p>
-            <p>This Layout has been tested on: IE10, IE9, IE8, FireFox, Chrome, Safari, Opera. using Pure CSS 2.1 only</p>
-        </div>
-     
-<!--     <div class="Wrapper"> -->
-<!-- Left Content -->
-             <div class="waa"> </div>
-                  <!-- Right Content -->
-          <div class="RightContent">
-                    
-            <div class="row">
-              <div class="span4">.asdasd.</div>
-              <div class="span8">...asdasd</div>
-            </div>
+<div ng-controller="QueryController">
+    <div class="Container">
+      <div class="Header">
+          <p>The Header div height is not fixed (But he can be if you want it to)</p>
+          <p>This Layout has been tested on: IE10, IE9, IE8, FireFox, Chrome, Safari, Opera. using Pure CSS 2.1 only</p>
+      </div>
+       
+    <!-- Left Content -->
+    <div class="MapAnimation"> 
 
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-            <p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p><p>this will scroll</p>
-          </div>
-
-
+    </div>
+    <!-- Right Content -->
+    <div class="RightContent">
           
-<!--     </div> -->
-</div>
-<!-- </body>
-</html>
+      <div class="InfoPackage">
+
+        <div class="leftValue">
+          <div class="picture1"></div>
+          <button class="middle" ng-click="direction()">Discovery
+          </button>
+          <!-- INSERT TEXT HERE -->
+        </div>
+
+        <div class="middleValue">
+          <div class="picture2"></div>
+          <button class="middle" ng-click="discovery()">Discovery</button>
+          <!-- INSERT TEXT HERE -->
+        </div>
+
+
+        <div class="rightValue">
+          <div class="picture3"></div>
+           <button class="middle" ng-click="design()">Discovery </button>
+          <!-- INsert TExt and button here  -->
+          </div>
+      </div>
+      <div class="TextForPackage">
+       <br> <h2>MAPPING MADE SIMPLE </h2><br>
+        <p>{{info}}</p>
+      </div>
+<br><br><br><br><br><br><br><br>
+
+<button class="middle">More Information</button> 
 
     </div>
-    </div>
-<div>
-
-</div>
-</div>
-<div class="MapAnimation"> 
-
-</div>
+  </div>
 
 
 <!--div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
