--- a/public/styles/GeneralStyles.css
+++ b/public/styles/GeneralStyles.css
@@ -14,19 +14,21 @@ width: 300px;
     transition: width 2s;
 	position: fixed;
 	content:url(http://localhost:3000/views/images/campus_map.jpg);
-	 padding-top: 40px;
-
- padding-left: 5px;
+	padding-top: 40px;
+ 	padding-left: 5px;
 	height: 100%;
 	width:50%;
 }
 .MapAnimation{
-	position: absolute;
+
+	position: fixed;
+	padding-top: 40px;
+ 	padding-left: 5px;
 	float: left;
 	height: 100%;
 	content:url(http://localhost:3000/views/images/campus_map.jpg);
 	width:100%;
-	 padding-top: 110px;
+
     -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
     transition: width 2s;
 }
@@ -55,13 +57,18 @@ button.leftmost{
     border-radius: 15px;
 }
 button.middle{
-	position: fixed;
+/*	position: fixed;
 	right : 390px;
-	top : 340px;
+	padding-top : 340px;
 	width: 90px;
-	height :30px;
+	height :30px;*/
+	padding-top : 10px;
     border: 2px solid;
-    border-radius: 15px;
+    border-radius: 20px;
+	float:center;
+	text-align: center;
+	display:block;
+    margin:0 auto;
 }
 button.rightmost{
 	position: fixed;
@@ -226,12 +233,71 @@ html, body, .Container
 }
 .RightContent
 {
-	width:50%;
+	width:49.94%;
 	float: right;
-    background-color: blue;
+    background-color: white;
     margin-top: 40px;
 /*     padding-top: 90px;
      height:100%;
       z-index: -1;*/
 }
+/*The following is to set up the infograhics stuff*/
+.InfoPackage {
+	width:100%;
+	height:210px;
+}
 
+.leftValue {
+	width:33.3%;
+	height:100%;
+	float :right;
+	background-color:white;
+}
+.rightValue{
+	width:33.3%;
+	float :right;
+	height:100%;
+	background-color:white;
+}
+.middleValue{
+	width:33.3%;
+	float :left;
+	height:100%;
+	background-color:white;
+}
+.picture1{
+	content:url(http://localhost:3000/views/images/circle.jpg);
+	text-align:center;
+	 width:90%; 
+    height: auto;
+    margin:0 auto;
+    padding-top:60px;
+}
+.picture2{
+	content:url(http://localhost:3000/views/images/circle.jpg);
+	text-align:center;
+	 width:90%; 
+    height: auto;
+    margin:0 auto;
+    padding-top:60px;
+}
+.picture3{
+	position:relative;
+
+	content:url(http://localhost:3000/views/images/circle.jpg);
+	text-align:center;
+	 width:90%; 
+    height: auto;
+    margin:0 auto;
+    padding-top:60px;
+}
+
+.TextForPackage {
+	margin:auto;
+	text-align: justify;
+    text-justify: inter-word;
+	width:70%;
+	height:50px;
+	text-align:center;
+	float:center;
+}
