--- a/public/views/home.html
+++ b/public/views/home.html
@@ -49,6 +49,7 @@ Direction
     </div>
     <!-- Right Content -->
     <div class="RightContent">
+    <A HREF="#top">Top</A>
           
       <div class="InfoPackage">
 
@@ -73,15 +74,34 @@ Direction
           </div>
       </div>
       <div class="TextForPackage">
-       <br> <h2>MAPPING MADE SIMPLE </h2><br>
+       <br><br><br><h2>MAPPING MADE SIMPLE </h2><br>
         <p>{{info}}</p>
       </div>
-<br><br><br><br><br><br><br><br>
+        <!-- Make some space -->
+        <br><br><br><br><br><br><br><br><br><br><br>
+      <button class="middle">More Information</button> 
+       
+      <!-- Make some space -->
+      <br><br><br><br><br><br><br>
+      <div class="video">
+      </div>
+      <div class="video">
+      </div>                <br><br><br><br><br><br><br>
+    <h2>Hello World<a name="top">Chapter 4</a></h2>
+      <br><br><br><br><br><br><br>
 
-<button class="middle">More Information</button> 
+      <div class="video">
+      </div>
 
+      <!--End Right Content -->
     </div>
+    <!--End the other thing-->
   </div>
+
+<!--End Controller -->
+  </div>
+
+  <!-- END THE END OF THE FIRST PAGE -->
 
 
 <!--div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
